--- a/language/definitions.xml
+++ b/language/definitions.xml
@@ -450,6 +450,7 @@
     <string name="title_coupon_convert" introduced="6.0.0"><![CDATA[Gift Certificate Conversion]]></string>
     <string name="coupon_convert_desc" introduced="6.0.0"><![CDATA[To use a coupon as a gift certificate (keeping a balance for multiple uses) it is possible to do so by assigning an order number to it. It must be a real order number with a status of &quot;Processing&quot; or &quot;Complete&quot;.]]></string>
     <string name="notify_gc_not_fixed" introduced="6.0.0"><![CDATA[Gift certificates can't have a percentage discount type.]]></string>
+    <string name="title_browse_brands" introduced="6.0.10"><![CDATA[Browse by Brand]]></string>
     <string name="title_coupon_products" introduced="5.1.5"><![CDATA[Product List Type]]></string>
     <string name="title_coupon_value" introduced="5.0.0"><![CDATA[Coupon Value]]></string>
     <string name="title_coupons" introduced="5.0.0"><![CDATA[Coupons]]></string>
