--- a/language/definitions.xml
+++ b/language/definitions.xml
@@ -334,12 +334,13 @@
     <string name="lead_time_estimate" introduced="6.0.10"><![CDATA[Estimated Lead Time]]></string>
     <string name="lead_time_min_estimate" introduced="6.0.10"><![CDATA[Estimated Minimum Lead Time]]></string>
     <string name="lead_time_max_estimate" introduced="6.0.10"><![CDATA[Estimated Maximum Lead Time]]></string>
+    <string name="lead_time_note" introduced="6.0.10"><![CDATA[Note: We will notify you of the actual lead time after contacting the manufacturer]]></string>
     <string name="lead_time_days_singular" introduced="6.0.10"><![CDATA[1 day]]></string>
     <string name="lead_time_days" introduced="6.0.10"><![CDATA[%d days]]></string>
     <string name="lead_time_days_range" introduced="6.0.10"><![CDATA[%d to %d days]]></string>
     <string name="lead_time_weeks" introduced="6.0.10"><![CDATA[%d weeks]]></string>
     <string name="lead_time_weeks_range" introduced="6.0.10"><![CDATA[%d to %d weeks]]></string>
-    <string name="lead_time_months" introduced="6.0.10"><![CDATA[Up to %d months<br>Note: We will notify you of the actual lead time after contacting the manufacturer]]></string>
+    <string name="lead_time_months" introduced="6.0.10"><![CDATA[Up to %d months]]></string>
     <string name="login_to_view" introduced="5.0.0"><![CDATA[Login to view price]]></string>
     <string name="manufacturer" introduced="5.0.0"><![CDATA[Manufacturer]]></string>
     <string name="master_caregory_id" introduced="5.0.0"><![CDATA[Category (ID or Name - Comma Separated)]]></string>
